@@ -27,5 +27,6 @@ EXPORTED {
 		xchat_emit_print;
 		xchat_list_time;
 		xchat_gettext;
+		xchat_send_modes;
 	local: *;
 };
